# matrix2mqtt

./: .editorconfig  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build_and_push_images.yml
src/: commandline_opts.rs  main.rs
