[package]
name = "matrix2mqtt"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.4"
clap = { version = "3.0.0-rc.8", features = ["std", "suggestions", "color", "env", "wrap_help", "derive"] }
paho-mqtt = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
matrix-sdk = "0.4.1"
tokio = { version = "1.15.0", features = ["full"] }
